@@ -4573,6 +4573,94 @@ on_button_ok_ingress_clicked (GtkButton *button, gpointer data) {
     {
       if (factura)
         {
+                    GtkListStore *store;
+          GtkTreeView *treeview;
+          GtkTreeViewColumn *column;
+          GtkCellRenderer *renderer;
+
+          store = gtk_list_store_new (8,
+                                      G_TYPE_STRING,
+                                      G_TYPE_STRING,
+                                      G_TYPE_STRING,
+                                      G_TYPE_DOUBLE,
+                                      G_TYPE_DOUBLE,
+                                      G_TYPE_STRING,
+                                      G_TYPE_STRING,
+                                      G_TYPE_BOOLEAN);
+
+          treeview = GTK_TREE_VIEW (gtk_builder_get_object (builder, "tree_view_partial_invoice"));
+          gtk_tree_view_set_model (GTK_TREE_VIEW (treeview), GTK_TREE_MODEL (store));
+
+          renderer = gtk_cell_renderer_text_new ();
+          column = gtk_tree_view_column_new_with_attributes ("Codigo", renderer,
+                                                             "text", 0,
+                                                             "foreground", 6,
+                                                             "foreground-set", 7,
+                                                             NULL);
+          gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+          gtk_tree_view_column_set_alignment (column, 0.5);
+          g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
+          gtk_tree_view_column_set_resizable (column, FALSE);
+
+          renderer = gtk_cell_renderer_text_new ();
+          column = gtk_tree_view_column_new_with_attributes ("Producto", renderer,
+                                                             "text", 1,
+                                                             "foreground", 6,
+                                                             "foreground-set", 7,
+                                                             NULL);
+          gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+          gtk_tree_view_column_set_alignment (column, 0.5);
+          gtk_tree_view_column_set_resizable (column, FALSE);
+
+          renderer = gtk_cell_renderer_text_new ();
+          column = gtk_tree_view_column_new_with_attributes ("Unit.", renderer,
+                                                             "text", 2,
+                                                             "foreground", 6,
+                                                             "foreground-set", 7,
+                                                             NULL);
+          gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+          gtk_tree_view_column_set_alignment (column, 0.5);
+          gtk_tree_view_column_set_resizable (column, FALSE);
+
+          renderer = gtk_cell_renderer_text_new ();
+          column = gtk_tree_view_column_new_with_attributes ("Cant. Sol.", renderer,
+                                                             "text", 3,
+                                                             "foreground", 6,
+                                                             "foreground-set", 7,
+                                                             NULL);
+          gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+          gtk_tree_view_column_set_alignment (column, 0.5);
+          g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
+          gtk_tree_view_column_set_resizable (column, FALSE);
+
+          gtk_tree_view_column_set_cell_data_func (column, renderer, control_decimal, (gpointer)3, NULL);
+
+          renderer = gtk_cell_renderer_text_new ();
+          column = gtk_tree_view_column_new_with_attributes ("Cant. Ing.", renderer,
+                                                             "text", 4,
+                                                             "foreground", 6,
+                                                             "foreground-set", 7,
+                                                             NULL);
+          gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+          gtk_tree_view_column_set_alignment (column, 0.5);
+          g_object_set (G_OBJECT (renderer), "xalign", 0.5, NULL);
+          gtk_tree_view_column_set_resizable (column, FALSE);
+
+          gtk_tree_view_column_set_cell_data_func (column, renderer, control_decimal, (gpointer)4, NULL);
+
+          renderer = gtk_cell_renderer_text_new ();
+          column = gtk_tree_view_column_new_with_attributes ("Sub-Total", renderer,
+                                                             "text", 5,
+                                                             "foreground", 6,
+                                                             "foreground-set", 7,
+                                                             NULL);
+          gtk_tree_view_append_column (GTK_TREE_VIEW (treeview), column);
+          gtk_tree_view_column_set_alignment (column, 0.5);
+          g_object_set (G_OBJECT (renderer), "xalign", 1.0, NULL);
+          gtk_tree_view_column_set_resizable (column, FALSE);
+
+          gtk_widget_show_all (GTK_WIDGET (builder_get (builder, "wnd_ingress_partial_invoice")));
+
         }
       else
         {
